次の投稿用にプレビューボタン押したら成功の表示が消えるように修正

--- a/public/views/tweet.html
+++ b/public/views/tweet.html
@@ -112,6 +112,7 @@
                 .done((data, textStatus, jqXHR) => {
                         if (jqXHR.status == 200) {
                             $('#preview_field').val(data)
+                            $("#complete").css("display", "none")
                         } else {
                             alert("失敗にゃ。\nごめんにゃ")
                         }
