Adsence用のタグ付なので直プッシュ

--- a/public/views/tweet.html
+++ b/public/views/tweet.html
@@ -27,6 +27,7 @@
 
         gtag('config', 'UA-49394469-4');
     </script>
+    <script data-ad-client="ca-pub-1070562852133600" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
 <body>
