--- a/public/views/tweet.html
+++ b/public/views/tweet.html
@@ -38,18 +38,14 @@
 
                 <form class="text_filed">
                     <span class="help-block">入力するにゃ</span>
-                    <textarea id="input_field" class="form-control" rows="3" maxlength="120"></textarea>
-                    <h6 class="pull-right text-right" id="count_message">0 / 120</h6>
+                    <textarea id="input_field" class="form-control" rows="2" maxlength="120"></textarea>
+                    <h6 class="pull-right text-right" id="input_count_message">0 / 120</h6>
                 </form>
 
-                <div class="button_wrapper">
-                    <p class="button">
-                        <button type="submit" id="preview" class="btn btn-info">プレビューにゃ</button>
-                    </p>
-                </div>
                 <form class="text_filed">
-                    <span class="help-block">確認するにゃ</span>
-                    <textarea id="preview_field" class="form-control" rows="3" readonly></textarea>
+                    <span class="help-block">プレビューにゃ</span>
+                    <textarea id="preview_field" class="form-control" rows="2" readonly></textarea>
+                    <h6 class="pull-right text-right" id="preview_count_message">0 / 140</h6>
                 </form>
                 <div class="button_wrapper" id="tweet_button">
                     <p class="button">
@@ -85,22 +81,43 @@
     </div>
 
     <script type="text/javascript">
-        $('#input_field').keyup(function() {
+        $(function() {
+            var $textarea = $('#input_field');
+            var lineHeight = parseInt($textarea.css('lineHeight'));
+            $textarea.on('input', function(e) {
+                console.log($(this).val())
+                var lines = ($(this).val() + '\n').match(/\n/g).length + 1;
+                $(this).height(lineHeight * lines);
+            });
+        });
+
+        function loadInputTextCount() {
             var text_max = 120;
             var text_length = $('#input_field').val().length;
 
-            document.getElementById('count_message').innerHTML = text_length + " / " + text_max
-        });
+            document.getElementById('input_count_message').innerHTML = text_length + " / " + text_max
+        }
 
-        $(function() {
-            // Ajax button click
-            $('#preview').on('click', function() {
-                var input = $('#input_field').val()
-                if (input == "") {
-                    alert("失敗にゃ。\n入力されてないにゃ")
-                    return
-                }
-                $.ajax({
+        function loadPreviewTextCount() {
+            var preview_text_max = 140;
+            var preview_text_length = $('#preview_field').val().length;
+
+            document.getElementById('preview_count_message').innerHTML = preview_text_length + " / " + preview_text_max
+
+            var $textarea = $('#preview_field');
+            var lineHeight = parseInt($textarea.css('lineHeight'));
+            var lines = ($('#preview_field').val() + '\n').match(/\n/g).length + 1;
+            $('#preview_field').height(lineHeight * lines);
+        }
+        $('#input_field').keyup(function() {
+            loadInputTextCount();
+
+            var input = $('#input_field').val()
+            if (input == "" || input == null) {
+                $('#preview_field').val("")
+                return
+            }
+            $.ajax({
                     async: true,
                     url: 'replace',
                     type: 'POST',
@@ -108,53 +125,57 @@
                         "message": input
                     }
                 })
-
                 // Ajaxリクエストが成功した時発動
                 .done((data, textStatus, jqXHR) => {
-                        if (jqXHR.status == 200) {
-                            $('#preview_field').val(data)
-                            $("#complete").css("display", "none")
-                        } else {
-                            alert("失敗にゃ。\nごめんにゃ")
-                        }
-                    })
-                    // Ajaxリクエストが失敗した時発動
-                    .fail((data) => {
-                        alert("失敗にゃ。\nごめんにゃ")
-                    })
-            });
+                    if (jqXHR.status == 200) {
+                        $('#preview_field').val(data)
+                        $("#complete").css("display", "none")
+                        loadPreviewTextCount();
+                    } else if (jqXHR.status == 400) {
+                        alert("文字数が限界を超えたにゃ\n気をつけるにゃ\n出直すにゃ")
+                    } else {
+                        alert("失敗にゃ\nごめんにゃ")
+                    }
+                })
+                // Ajaxリクエストが失敗した時発動
+                .fail((data) => {
+                    alert("失敗にゃ\nごめんにゃ")
+                })
+        });
+
+        $(function() {
             $('#tweet').on('click', function() {
                 var tweet = $('#preview_field').val()
                 if (tweet == "") {
-                    alert("失敗にゃ。\n入力されてないにゃ")
+                    alert("失敗にゃ\n入力されてないにゃ")
                     return
                 }
                 $("#tweet_button_wrap").css("display", "none")
                 $("#indicator_button_wrap").css("display", "block")
                 $.ajax({
-                        async: true,
-                        url: 'post',
-                        type: 'POST',
-                        data: {
-                            "message": tweet
-                        }
-                    })
-                    // Ajaxリクエストが成功した時発動
-                    .done((data, textStatus, jqXHR) => {
+                    async: true,
+                    url: 'post',
+                    type: 'POST',
+                    data: {
+                        "message": tweet
+                    }
+                })
+
+                // Ajaxリクエストが成功した時発動
+                .done((data, textStatus, jqXHR) => {
                         $("#tweet_button_wrap").css("display", "block")
                         $("#indicator_button_wrap").css("display", "none")
                         if (jqXHR.status == 200) {
                             $("#link_btn").attr("href", data)
                             $("#link_tweet").attr("href", data)
                             $("#complete").css("display", "block")
-                            twttr.widgets.load();
                         } else {
                             window.location.href = "./auth";
                         }
                     })
                     // Ajaxリクエストが失敗した時発動
                     .fail((data) => {
-                        alert("失敗にゃ。\nごめんにゃ")
+                        alert("失敗にゃ\nごめんにゃ")
                     })
             });
         });
