プレビューの背景色を白から薄グレーに変更

--- a/public/views/tweet.html
+++ b/public/views/tweet.html
@@ -45,7 +45,7 @@
 
                 <form class="text_filed">
                     <span class="help-block">プレビューにゃ</span>
-                    <textarea id="preview_field" class="form-control" rows="2"></textarea>
+                    <textarea id="preview_field" class="form-control" rows="2" style="background: #eeeeee;"></textarea>
                     <h6 class="pull-right text-right" id="preview_count_message">0 / 140</h6>
                 </form>
                 <form class="text_filed">
