--- a/public/views/tweet.html
+++ b/public/views/tweet.html
@@ -3,6 +3,14 @@
 
 <head>
     <title>にゃイッター</title>
+    <!---Twitter Card-->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@sasa_nss_app" />
+    <meta property="og:url" content="https://cat.newstyleservice.net" />
+    <meta property="og:title" content="にゃイッター" />
+    <meta property="og:description" content="猫語でツイートしてくれるアプリ！" />
+    <meta property="og:image" content="./header.png" />
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
