--- a/public/views/tweet.html
+++ b/public/views/tweet.html
@@ -9,7 +9,7 @@
     <meta property="og:url" content="https://cat.newstyleservice.net" />
     <meta property="og:title" content="にゃイッター" />
     <meta property="og:description" content="猫語でツイートしてくれるアプリ！" />
-    <meta property="og:image" content="./header.png" />
+    <meta property="og:image" content="https://cat.newstyleservice.net/header.png" />
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
