カード用の画像追加

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -5,11 +5,11 @@
     <title>にゃイッター</title>
     <!---Twitter Card-->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@sasa_nss_app" />
+    <meta name="twitter:creator" content="@sasa_nss_app" />
     <meta property="og:url" content="https://cat.newstyleservice.net" />
     <meta property="og:title" content="にゃイッター" />
     <meta property="og:description" content="猫語でツイートしてくれるアプリ！" />
-    <meta property="og:image" content="https://cat.newstyleservice.net/header.png" />
+    <meta property="og:image" content="https://cat.newstyleservice.net/twitter-card.png" />
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
