--- a/public/views/tweet.html
+++ b/public/views/tweet.html
@@ -61,11 +61,15 @@
           <span class="help-block">リプライするツイートのリンクを入力するにゃ</span>
           <textarea id="reply_field" class="form-control" rows="1" maxlength="120">{{.Reply}}</textarea>
         </form>
+
+        <input id="file-sample" type="file">
+        <img id="file-preview">
+
         <div class="button_wrapper" id="tweet_button">
           <p class="button">
                         <div id="tweet_button_wrap">
-                            <button type="submit" id="clear" class="btn btn-outline-primary">クリアにゃ</button>
-                            <button type="submit" id="tweet" class="btn btn-primary">ツイートにゃ</button>
+                            <button type="submit" id="clear" data-toggle="collapse" class="btn btn-outline-primary">クリアにゃ</button>
+                            <button type="submit" id="tweet" data-toggle="collapse" class="btn btn-primary">ツイートにゃ</button>
                         </div>
                         <div id="indicator_button_wrap" style="display: none;">
                             <button class="btn btn-primary" id="indicator" type="button" disabled>
@@ -79,6 +83,7 @@
           <strong>成功にゃ！！</strong>
           <a id="link_btn" href="#" target="_blank">ツイートを確認しに行くにゃ</a>
         </div>
+
 
         <div>
           <table id="readme" class="table">
@@ -95,6 +100,35 @@
   </div>
 
   <script type="text/javascript">
+    document.getElementById('file-sample').addEventListener('change', function (e) {
+      // 1枚だけ表示する
+      var file = e.target.files[0];
+
+      // ファイルリーダー作成
+      var fileReader = new FileReader();
+      fileReader.onload = function () {
+        // Data URIを取得
+        var dataUri = this.result;
+
+        // img要素に表示
+        var img = document.getElementById('file-preview');
+        img.src = dataUri;
+      }
+
+      // ファイルをData URIとして読み込む
+      fileReader.readAsDataURL(file);
+    });
+    function ImageToBase64(img, mime_type) {
+      // New Canvas
+      var canvas = document.createElement('canvas');
+      canvas.width = img.width;
+      canvas.height = img.height;
+      // Draw Image
+      var ctx = canvas.getContext('2d');
+      ctx.drawImage(img, 0, 0);
+      // To Base64
+      return canvas.toDataURL(mime_type);
+    }
     $(function () {
       $.ajax({
         type: 'GET',
@@ -183,6 +217,8 @@
         var tweet = $('#preview_field').val()
         var input = $('#input_field').val()
         var link = $('#reply_field').val()
+        var img = document.getElementById('file-preview');
+        var b64 = ImageToBase64(img, "image/jpeg");
         if (tweet == "") {
           alert("失敗にゃ\n入力されてないにゃ")
           return
@@ -196,7 +232,8 @@
           data: {
             "message": tweet,
             "input": input,
-            "reply": link
+            "reply": link,
+            "image": b64
           }
         })
 
