--- a/public/views/index.html
+++ b/public/views/index.html
@@ -5,11 +5,11 @@
   <title>にゃイッター</title>
   <!---Twitter Card-->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:creator" content="@sasa_nss_app" />
-  <meta property="og:url" content="https://cat.newstyleservice.net" />
+  <meta name="twitter:creator" content="@sasa_app" />
+  <meta property="og:url" content="https://cat.ss-n.app" />
   <meta property="og:title" content="にゃイッター" />
   <meta property="og:description" content="猫語でツイートしてくれるアプリ！" />
-  <meta property="og:image" content="https://cat.newstyleservice.net/twitter-card.png" />
+  <meta property="og:image" content="https://cat.ss-n.app/twitter-card.png" />
 
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -48,7 +48,7 @@
             <img class="d-flex align-self-end mr-3 thumnail" src="https://avatars2.githubusercontent.com/u/40590821?s=460&v=4" alt="Generic placeholder image">
             <div class="media-body">
               <p class="mb-0"><a href="https://twitter.com/sasa_app">笹のり 400エラー</a></p>
-              <p class="mb-0"><a href="https://github.com/saas-nori">@sasa-nori</a></p>
+              <p class="mb-0"><a href="https://github.com/sasa-nori">@sasa-nori</a></p>
             </div>
           </div>
         </div>
