--- a/public/views/tweet.html
+++ b/public/views/tweet.html
@@ -5,11 +5,11 @@
   <title>ツイートするにゃ</title>
   <!---Twitter Card-->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:creator" content="@sasa_nss_app" />
-  <meta property="og:url" content="https://cat.newstyleservice.net" />
-  <meta property="og:title" content="ツイートするにゃ" />
+  <meta name="twitter:creator" content="@sasa_app" />
+  <meta property="og:url" content="https://cat.ss-n.app" />
+  <meta property="og:title" content="にゃイッター" />
   <meta property="og:description" content="猫語でツイートしてくれるアプリ！" />
-  <meta property="og:image" content="https://cat.newstyleservice.net/twitter-card.png" />
+  <meta property="og:image" content="https://cat.ss-n.app/twitter-card.png" />
 
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -98,7 +98,7 @@
     $(function () {
       $.ajax({
         type: 'GET',
-        url: 'https://raw.githubusercontent.com/noriyuki-sasagawa/nyaitter/develop/README.md',
+        url: 'https://raw.githubusercontent.com/sasa-nori/nyaitter/develop/README.md',
         dataType: 'html',
         success: function (data) {
           console.log(data)
