--- a/public/views/css/common.css
+++ b/public/views/css/common.css
@@ -23,3 +23,13 @@
 .text_filed {
     margin-top: 30px;
 }
+
+.imagePreview {
+
+  width: 100%;
+  height: 180px;
+  background-position: center center;
+  background-size: cover;
+  -webkit-box-shadow: 0 0 1px 1px rgba(0, 0, 0, .3);
+  display: inline-block;
+}
