idが間違ってるのを修正

--- a/public/views/tweet.html
+++ b/public/views/tweet.html
@@ -236,7 +236,7 @@
         var tweet = $('#preview_field').val()
         var input = $('#input_field').val()
         var link = $('#reply_field').val()
-        var img = document.getElementById('file-preview');
+        var img = document.getElementById('imagePreview');
         var b64 = ImageToBase64(img, "image/jpeg");
         if (tweet == "") {
           alert("失敗にゃ\n入力されてないにゃ")
