--- a/public/views/index.html
+++ b/public/views/index.html
@@ -47,8 +47,8 @@
           <div class="media">
             <img class="d-flex align-self-end mr-3 thumnail" src="https://avatars2.githubusercontent.com/u/40590821?s=460&v=4" alt="Generic placeholder image">
             <div class="media-body">
-              <p class="mb-0"><a href="https://twitter.com/sasa_app">笹のり 400エラー</a></p>
-              <p class="mb-0"><a href="https://github.com/sasa-nori">@sasa-nori</a></p>
+              <p class="mb-0"><a href="https://twitter.com/sasa_app">Twitter : 笹のり 400エラー</a></p>
+              <p class="mb-0"><a href="https://github.com/sasa-nori">Github : @sasa-nori</a></p>
             </div>
           </div>
         </div>
